2009-12-07  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] Doesn't respect Content-Disposition for downloads, and provides no way for apps to do that
        https://bugs.webkit.org/show_bug.cgi?id=32247

        Provide a way for applications to respect Content-Disposition, by
        fetching the WebKitNetworkResponse from the frame during
        mime-type-policy-decision-requested.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDecidePolicyForMIMEType): Download
        content when Content-Disposition is attachment.
        * tests/testmimehandling.c:
        (server_callback):
        (mime_type_policy_decision_requested_cb):
        * tests/testwebframe.c:
        (test_webkit_web_frame_response):
        (main):
        * webkit/webkitprivate.cpp:
        (WebKit::core):
        * webkit/webkitwebframe.cpp:
        (webkit_web_frame_get_network_response):
        * webkit/webkitwebframe.h:

2009-12-07  Gyuyoung Kim  <gyuyoung@gmail.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32024
        [GTK] WebKit does not compile without JAVASCRIPT_DEBUGGER

        Fix build errors when javascript-debugger is disabled on GTK

        * webkit/webkitwebinspector.cpp:
        (webkit_web_inspector_set_property):
        (webkit_web_inspector_get_property):

2009-12-07  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=25415
        [GTK][ATK] Please implement support for get_text_at_offset

        Eliminate the segfaults which occur when accessing the text interface now
        implemented by text controls.

        * tests/testatk.c
        (test_webkit_atk_get_text_at_offset_textarea):
        (test_webkit_atk_get_text_at_offset_text_input):
        (main):

2009-12-06  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Xan Lopez.
